kubernetes/apps/home-automation/docker-mailserver/roundcube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundcube
  namespace: home-automation
  labels:
    app: roundcube

spec:
  type: ClusterIP
  selector:
    app: roundcube
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
