kubernetes/apps/home-automation/docker-mailserver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-mailserver
  namespace: home-automation
  labels:
    app: docker-mailserver
spec:
  selector:
    app: docker-mailserver
  ports:
    - name: smtp
      port: 25
      targetPort: 25
      protocol: TCP
    - name: smtp-submission
      port: 587
      targetPort: 587
      protocol: TCP
    - name: imaps
      port: 993
      targetPort: 993
      protocol: TCP
    - name: imap
      port: 143
      targetPort: 143
      protocol: TCP
  type: ClusterIP
