kubernetes/apps/home-automation/docker-mailserver/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundcube-webmail
  namespace: home-automation
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"

spec:
  ingressClassName: external
  tls:
    - hosts:
        - webmail.rutberg.dev
      secretName: roundcube-tls

  rules:
    - host: webmail.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: roundcube
                port:
                  number: 80
