kubernetes/apps/home-automation/docker-mailserver/roundcube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundcube
  namespace: home-automation
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - webmail.rutberg.dev
      secretName: roundcube-tls
  rules:
    - host: webmail.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: roundcube
                port:
                  number: 80
